--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.5",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
