--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
